
------------------------------------------------------------------------------------------------

ediarum.BASIS 
Digitale Arbeitsumgebung für Editionsvorhaben

Framework (Dokumenttyp Zuordnung) für Oxygen XML 

Entwicklung: Stefan Dumont, dumont@bbaw.de; Sascha Grabsch, grabsch@bbaw.de

CHANGELOG
------------------------------------------------------------------------------------------------

0.26.0 vom 11.08.2017

	FEATURE #8310: Nummerierung der Briefe für print-Ausgabe
	FEATURE #8493: @cert in Korrespondenz-Metadaten
	FEATURE #8492: Gedicht/Strophe (lg) im Menü verfügbar
	FEATURE #7910: ediarum für Drucktexte
	FEATURE #8636: Auszeichnung von Firmen in Handschriftenbeschreibung
    FEATURE #8599: Sonderfunktion Einrückung von Absätzen und Listen
	FEATURE #8653: Rearrangieren der Menüs "Allgemein" und "Brieftext"
	UPDATE #8703: Update ediarum.jar auf Version 2.2.0    

0.25.0 vom 16.06.2017

    FEATURE #8380: Schlagworte/Themen für Briefe und Dokumente
	FEATURE #8379: Personenauszeichnung in Handschriftenbeschreibung
	FEATURE #8485: Aktion: Verlinkung in "Anmerkungen zum Text"
	FEATURE #8449: Verlinkung von Beilagen
    FEATURE #8448: Mehrfache "Anmerkung zum Brief"
	BUGFIX #8475: Darstellung von Verweisen in "Anmerkungen zum Brief"
	BUGFIX #7853: Funktion "Auszeichnung löschen" für Firmennamen fehlerhaft
	BUGFIX #8478: ñ wird falsch ausgespielt

0.24.0 vom 15.05.2017

	BUGFIX #7291: Funktion "Sachanmerkung löschen" fehlerhaft
	BUGFIX #8315: Verweis auf Sachanmerkung verwendet falsches Attribut (@key statt @target)
	BUGFIX #8316: Darstellung im Author-Mode für Streichung entfernt vorhandene Formatierung
	FEATURE #6209: Tabelle sichtbar/unsichtbar
	FEATURE #7339: Bildunterschrift
	FEATURE #7367: <hi> darf nicht in <idno> erlaubt sein
	FEATURE #7548: @hand='unknown'
	FEATURE #7608: Schriftwechsel in Antiqua
	FEATURE #7720: Aktion für fette Textstellen
	FEATURE #7747: <metamark/> in <p/>
	FEATURE #7833: Erweiterung von @hand in <note/> und <figure/>