@@ -14,6 +14,10 @@ Entwicklung: Stefan Dumont, dumont@bbaw.de; Sascha Grabsch, grabsch@bbaw.de
 CHANGELOG
 ------------------------------------------------------------------------------------------------
 
+UNRELEASED
+
+	FEATURE #8942: Alternative Titel für Zeitschriften/Periodika
+
 0.26.0 vom 11.08.2017
 
 	FEATURE #8310: Nummerierung der Briefe für print-Ausgabe
